Alterações na Região do Banner e Cards

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="">
     <meta name="title" content="">
-    <meta name="description" content>
+    <meta name="description" content="">
     <meta name="robot" content="">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/img/favicon.webp" type="image/x-icon">
     <title>Loren Ipsum</title>
@@ -17,8 +18,84 @@
 
 <body id="index">
 
-    
+    <header>
 
+        <div class="container">
+            <div id="form" class="form">
+                <hgroup>
+                    <h1>
+                        lorem Ipsum
+                    </h1>
+
+                    <h3>
+                        Lorem ipsum dolor sit amet.
+                    </h3>
+
+                </hgroup>
+
+                <form action="./obrigado" method="get">
+                    <input type="text" name="name" id="name" placeholder="Name" required>
+                    <input type="email" name="email" id="emial" placeholder="E-mail" required>
+                    <input type="submit" value="Quero Garantir Minha Vaga">
+                </form>
+
+                <ul>
+                    <li> Dos dias X a Y de Julho</li>
+                    <li>100% gratuito e online.</li>
+                </ul>
+            </div>
+        </div>
+
+    </header>
+
+    <main>
+
+        <div class="container">
+            <div class="card">
+                <h2>Nossos Encontros</h2>
+
+                <div class="row">
+                    <div class="column">
+                        <div class="column-content">
+                            <p>Aula 1 - xx/yy</p>
+                            <h3>Apresentação</h3>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="column-content">
+                            <p>Aula 2 - xx/yy</p>
+                            <h3>Método</h3>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="column-content">
+                            <p>Aula 3 - xx/yy</p>
+                            <h3>Fornecedores</h3>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="column-content">
+                            <p>Aula 4 - xx/yy</p>
+                            <h3>Produtividade</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="button">
+                <button>
+                    <a href="#form">Quero Participar</a>
+                </button>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
