Lading page finalizada  + Responsividade

--- a/index.html
+++ b/index.html
@@ -55,38 +55,46 @@
                 <h2>Nossos Encontros</h2>
 
                 <div class="row">
-                    <div class="column">
-                        <div class="column-content">
-                            <p>Aula 1 - xx/yy</p>
-                            <h3>Apresentação</h3>
+                    <div class="feature odd first">
+                        <div class="column">
+                            <div class="column-content">
+                                <p>Aula 1 - xx/yy</p>
+                                <h3>Apresentação</h3>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="column">
-                        <div class="column-content">
-                            <p>Aula 2 - xx/yy</p>
-                            <h3>Método</h3>
+                    <div class="feature even second">
+                        <div class="column">
+                            <div class="column-content">
+                                <p>Aula 2 - xx/yy</p>
+                                <h3>Método</h3>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="column">
-                        <div class="column-content">
-                            <p>Aula 3 - xx/yy</p>
-                            <h3>Fornecedores</h3>
+                    <div class="feature odd thrist">
+                        <div class="column">
+                            <div class="column-content">
+                                <p>Aula 3 - xx/yy</p>
+                                <h3>Fornecedores</h3>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="column">
-                        <div class="column-content">
-                            <p>Aula 4 - xx/yy</p>
-                            <h3>Produtividade</h3>
+                    <div class="feature even fourth">
+                        <div class="column">
+                            <div class="column-content">
+                                <p>Aula 4 - xx/yy</p>
+                                <h3>Produtividade</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="button">
-                <button>
+                <button class=" first">
                     <a href="#form">Quero Participar</a>
                 </button>
             </div>
@@ -95,7 +103,42 @@
 
     <footer>
 
+        <div class="container">
+            <div class="profile">
+                <img src="./assets/img/Profile.webp" alt="profile image">
+            </div>
+
+            <div class="profile-content">
+                <h2>Lorem Ipsum</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis aliquid maiores mollitia, omnis cumque
+                    explicabo officiis velit est architecto necessitatibus iure non nihil a autem suscipit dignissimos
+                    odit
+                    molestias molestiae.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis aliquid maiores mollitia, omnis cumque
+                    explicabo officiis velit est architecto necessitatibus iure non nihil a autem suscipit dignissimos
+                    odit
+                    molestias molestiae.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis aliquid maiores mollitia, omnis cumque
+                    explicabo officiis velit est architecto necessitatibus iure non nihil a autem suscipit dignissimos
+                    odit
+                    molestias molestiae.</p>
+            </div>
+
+            <div class="button">
+                <button class="footer">
+                    <a href="#form">Quero Participar</a>
+                </button>
+            </div>
+
+        </div>
     </footer>
+
+    <section class="copy">
+        <p>lorem ipsum - Todos Direito Reservados</p>
+        <p>Página Feita por Danilo Silva - <span>Elite Chilli</span></p>
+    </section>
 </body>
 
 </html>
